# pylibxmplite

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  Makefile  README.md  _libxmplite.c  build_ffi_module.py  libxmplite.c  libxmplite.py  setup.cfg  setup.py
examples/: moddecode.py  modplay-gui.py  modplay-windows.py  modplay.py
examples/mods/: dragon.it  sextyfour.mod  unchartedlands.xm
libxmp-lite/: Makefile  Makefile.in  Makefile.os2  Makefile.vc  config.status  configure  depend  libxmp-lite.pc
