[metadata]
description = python bindings for the libxmp-lite modplayer library (protracker, screamtracker, ...)
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/irmen/pylibxmplite
author = Irmen de Jong
author_email = irmen@razorvine.net
keywords = sound, audio, playback, tracker, module, protracker, Amiga
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 4 - Beta
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Players

[pycodestyle]
max-line-length = 120
exclude = .git,__pycache__,.tox,.eggs,.mypy_cache,build,build_ffi_module.py
